--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div style="width: 400px;">
       
       <a-scene>
-        <a-sky src="PANO_20140222_124855.jpg" rotation="0 -130 0"></a-sky>
+        <a-sky src="https://vr.justeasy.cn/view/8210106.html" rotation="0 -130 0"></a-sky>
       </a-scene>
 
     </div>
